--- a/privacy/index.html
+++ b/privacy/index.html
@@ -148,7 +148,7 @@
 
 <p>This information is only ever shared within the SEEN network’s steering group, and only for the purpose of carrying out the actions outlined above.</p>
 
-<p>All personal information held is held securely and is protected. We will never reveal your identity to a third party outside our network without your consent.</p>
+<p>All personal information held is held securely and is protected. We will never reveal your identity to a third party outside our network steering group without your consent.</p>
 
 <h4 id="data-removal-requests">Data removal requests</h4>
 
