--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <!-- Document Settings -->
     <meta charset="utf-8" />
@@ -122,7 +122,7 @@
 
 <p>We also aim to be a source of expertise for staff on the protected characteristics of sex, pregnancy and maternity, and sexual orientation, as well as the importance of taking these fully into account to meet staff rights and needs.</p>
 
-<p>SEEN membership is open to staff who share our values, from central government departments, agencies, and their associated public bodies including arm’s length bodies.</p>
+<p>SEEN membership is open to UK civil servants and public sector staff - from central government departments, agencies, and their associated public bodies including arm’s length bodies - who support our mission and share our values.</p>
 
 <p>If you would like to contact us, learn more about our mission or membership, or be added to our mailing list, <strong><a href="/contact/">please get in touch</a></strong>.</p>
 
