--- a/contact/index.html
+++ b/contact/index.html
@@ -73,8 +73,9 @@
     <ul>
         <li class="nav-home " role="presentation"><a href="/">Home</a></li>
         <li class="nav-about " role="presentation"><a href="/about">About</a></li>
-        <li class="nav-about  nav-current" role="presentation"><a href="/contact">Contact</a></li>
-        <li class="nav-author " role="presentation"><a href="/author/seen">SEEN</a></li>
+        <li class="nav-faq " role="presentation"><a href="/faq">FAQs</a></li>
+        <li class="nav-contact  nav-current" role="presentation"><a href="/contact">Contact</a></li>
+        <li class="nav-seen " role="presentation"><a href="/author/seen">SEEN</a></li>
     </ul>
     <a class="subscribe-button icon-feed" href="/feed.xml">Subscribe</a>
 </div>
