--- a/about/index.html
+++ b/about/index.html
@@ -125,7 +125,7 @@
 
 <p>SEEN membership is open to UK civil servants and public sector staff - from central government departments, agencies, and their associated public bodies including arm’s length bodies - who support our mission and share our values.</p>
 
-<p>If you would like to contact us, learn more about our mission or membership, or be added to our mailing list, <strong><a href="/contact/">please get in touch</a></strong>.</p>
+<p>If you would like to contact us, learn more about our mission or membership, or be added to our mailing list, <strong><a href="/contact/">please get in touch</a></strong>.  See also our <strong><a href="/faq/">FAQ page</a></strong>.</p>
 
         </section>
 
