--- a/faq/index.html
+++ b/faq/index.html
@@ -128,7 +128,7 @@
 
 <h4 id="who-is-seen-for">Who is SEEN for?</h4>
 
-<p>SEEN is for any colleague who shares our values as set out in our Mission Statement and Guiding Principles. SEEN is a source of support, advice and resources for colleagues who require assistance in furthering our mission (set out above).  We will also be a source of support for colleagues who experience bullying, harassment or discrimination because they share our beliefs.</p>
+<p>SEEN membership is for any UK civil servants and public sector staff - from central government departments, agencies, and their associated public bodies including arm’s length bodies - who share our values as set out in our Mission Statement and Guiding Principles.  SEEN is a source of support, advice and resources for colleagues who require assistance in furthering our mission (set out above).  We will also be a source of support for colleagues who experience bullying, harassment or discrimination because they share our beliefs.</p>
 
 <h4 id="what-do-we-mean-by-sex-equality-and-equity">What do we mean by ‘sex equality and equity’?</h4>
 
