--- a/faq/index.html
+++ b/faq/index.html
@@ -74,8 +74,10 @@
         <li class="nav-home " role="presentation"><a href="/">Home</a></li>
         <li class="nav-about " role="presentation"><a href="/about">About</a></li>
         <li class="nav-faq  nav-current" role="presentation"><a href="/faq">FAQs</a></li>
+        <li class="nav-tolerance " role="presentation"><a href="/posts/2022-11-22-on-tolerance">On tolerance</a></li>
         <li class="nav-contact " role="presentation"><a href="/contact">Contact</a></li>
         <li class="nav-seen " role="presentation"><a href="/author/seen">SEEN</a></li>
+        <li class="nav-unseen " role="presentation"><a href="/author/unseen">UNSEEN</a></li>
     </ul>
     <a class="subscribe-button icon-feed" href="/feed.xml">Subscribe</a>
 </div>
@@ -137,7 +139,7 @@
   <li>We are committed to ensuring that civil servants uphold the sex-based rights which support women’s and men’s rights and needs at work, including the protected characteristics of sex, pregnancy and maternity and sexual orientation set out in the Equality Act 2010; and that these rights are balanced against other rights, where lawful and necessary.</li>
   <li>We are committed to helping civil servants feel confident to exercise their rights under the European Convention of Human Rights to freedom of thought, conscience and religion, freedom of expression and freedom of assembly and association, provided they manifest their rights lawfully and respectfully and within the Civil Service Code.</li>
   <li>We are committed to the protected belief (covered by the protected characteristic of religion and belief in the Equality Act 2010) that biological sex is binary and immutable, that biological sex matters for both women and men in our everyday lives including for our rights and needs in the workplace, and that biological sex must not be conflated with the concepts of gender or gender identity. Civil servants who hold this protected belief must not be marginalised, disadvantaged or discriminated against.</li>
-  <li>We are committed to helping our employers to meet their Public Sector Equality Duty, including to ‘foster good relations between people who share a protected characteristic and those who do not’, by encouraging a diversity of voices and open and respectful dialogue and tolerance between those with differing beliefs and experiences.</li>
+  <li>We are committed to helping our employers to meet their Public Sector Equality Duty, including to ‘foster good relations between people who share a protected characteristic and those who do not’, by encouraging a diversity of voices and open and respectful dialogue and <a href="/posts/2022-11-22-on-tolerance/">tolerance</a> between those with differing beliefs and experiences.</li>
 </ol>
 
 <h4 id="who-is-seen-for">Who is SEEN for?</h4>
@@ -166,11 +168,11 @@
 
 <h4 id="is-seen-connected-to-any-religious-or-faith-groups-or-other-groups">Is SEEN connected to any religious or faith groups or other groups?</h4>
 
-<p>No. SEEN is an independent and secular network that is neither affiliated with the management of the Civil Service nor the trade unions nor with any external group. The beliefs and opinions held by SEEN members are diverse save for our commitment to fairness, tolerance and pluralism and our shared understanding that recognising the importance of biological sex underpins everyone’s rights and needs.</p>
+<p>No. SEEN is an independent and secular network that is neither affiliated with the management of the Civil Service nor the trade unions nor with any external group. The beliefs and opinions held by SEEN members are diverse save for our commitment to fairness, <a href="/posts/2022-11-22-on-tolerance/">tolerance and pluralism</a> and our shared understanding that recognising the importance of biological sex underpins everyone’s rights and needs.</p>
 
 <h4 id="how-does-seen-relate-to-other-staff-networks">How does SEEN relate to other staff networks?</h4>
 
-<p>SEEN believes in fairness, tolerance and pluralism. We welcome engagement and collaboration with other staff networks, recognising there will be areas of agreement and difference. SEEN strongly supports the commitment in the <a href="https://www.gov.uk/government/publications/civil-service-diversity-and-inclusion-strategy-2022-to-2025/civil-service-diversity-and-inclusion-strategy-2022-to-2025-html">Civil Service 2022-25 Diversity and Inclusion Strategy</a> to increase the diversity of voices in our workplaces and to avoid and challenge groupthink.</p>
+<p>SEEN believes in fairness, <a href="/posts/2022-11-22-on-tolerance/">tolerance and pluralism</a>. We welcome engagement and collaboration with other staff networks, recognising there will be areas of agreement and difference. SEEN strongly supports the commitment in the <a href="https://www.gov.uk/government/publications/civil-service-diversity-and-inclusion-strategy-2022-to-2025/civil-service-diversity-and-inclusion-strategy-2022-to-2025-html">Civil Service 2022-25 Diversity and Inclusion Strategy</a> to increase the diversity of voices in our workplaces and to avoid and challenge groupthink.</p>
 
         </section>
 
