--- a/about/index.html
+++ b/about/index.html
@@ -74,8 +74,10 @@
         <li class="nav-home " role="presentation"><a href="/">Home</a></li>
         <li class="nav-about  nav-current" role="presentation"><a href="/about">About</a></li>
         <li class="nav-faq " role="presentation"><a href="/faq">FAQs</a></li>
+        <li class="nav-tolerance " role="presentation"><a href="/posts/2022-11-22-on-tolerance">On tolerance</a></li>
         <li class="nav-contact " role="presentation"><a href="/contact">Contact</a></li>
         <li class="nav-seen " role="presentation"><a href="/author/seen">SEEN</a></li>
+        <li class="nav-unseen " role="presentation"><a href="/author/unseen">UNSEEN</a></li>
     </ul>
     <a class="subscribe-button icon-feed" href="/feed.xml">Subscribe</a>
 </div>
@@ -119,7 +121,7 @@
 
 <p>The law requires the rights of people with different protected characteristics and protected beliefs to be balanced in the workplace, and we are committed to helping to achieve that balance. We respect colleagues’ beliefs (including beliefs regarding gender identity) and colleagues’ lack of belief in either gender identity or in the importance of binary sex (because lack of belief is also protected). We want to ensure different protected characteristics and protected beliefs are clearly defined, so that everyone’s rights can be properly understood and protected and appropriately balanced where necessary.</p>
 
-<p>As a part of our mission we want all civil servants to feel safe to exercise their legal rights under the European Convention of Human Rights to freedom of thought, conscience and religion, freedom of expression and freedom of assembly and association, provided they manifest their rights lawfully and respectfully and within the <a href="https://www.gov.uk/government/publications/civil-service-code/the-civil-service-code">Civil Service Code</a>.  We wish to encourage a diversity of voices and open and respectful dialogue and tolerance between those with differing beliefs and experiences.  SEEN is a secular network and our work will be focused on evidence-based analysis.  We are not aligned with any religion or with any external interest group.  We are committed to the Civil Service Code’s core values of integrity, honesty, objectivity, and impartiality.</p>
+<p>As a part of our mission we want all civil servants to feel safe to exercise their legal rights under the European Convention of Human Rights to freedom of thought, conscience and religion, freedom of expression and freedom of assembly and association, provided they manifest their rights lawfully and respectfully and within the <a href="https://www.gov.uk/government/publications/civil-service-code/the-civil-service-code">Civil Service Code</a>.  We wish to encourage a diversity of voices and open and respectful dialogue and <a href="/posts/2022-11-22-on-tolerance/">tolerance</a> between those with differing beliefs and experiences.  SEEN is a secular network and our work will be focused on evidence-based analysis.  We are not aligned with any religion or with any external interest group.  We are committed to the Civil Service Code’s core values of integrity, honesty, objectivity, and impartiality.</p>
 
 <p>We also aim to be a source of expertise for staff on the protected characteristics of sex, pregnancy and maternity, and sexual orientation, as well as the importance of taking these fully into account to meet staff rights and needs.</p>
 
