--- a/404.html
+++ b/404.html
@@ -43,14 +43,14 @@
 
     <!-- Add Google Analytics  -->
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M68CLZWFBN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-M68CLZWFBN');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M68CLZWFBN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('consent', 'default', {'ad_storage': 'denied', 'analytics_storage': 'denied'});
+      gtag('config', 'G-M68CLZWFBN');
+    </script>
 
 </body>
 </html>
